# CFGScraper

./: .env  Dockerfile.CfgProcessor  Dockerfile.CfgProcessorCpp  Dockerfile.CfgProcessorPython  Dockerfile.ElasticsearchUpload  Dockerfile.UrlApp  LICENSE  Makefile  docker-compose.yaml  pyproject.toml
elasticsearch/: nodes
elasticsearch/_state/: _cx.cfe  _cx.cfs  _cx.si  _cx_e.liv  _cy.cfe  _cy.cfs  _cy.si  _cz.cfe  _cz.cfs  _cz.si  _d0.cfe  _d0.cfs  _d0.si  _d1.cfe  _d1.cfs  _d1.si  _d2.cfe  _d2.cfs  _d2.si  _d3.cfe  _d3.cfs  _d3.si  _d4.cfe  _d4.cfs  _d4.si  _d5.cfe  _d5.cfs  _d5.si  _d6.cfe  _d6.cfs  _d6.si  _d7.cfe  _d7.cfs  _d7.si  _d8.cfe  _d8.cfs  _d8.si  _d9.cfe  _d9.cfs  _d9.si  (+8 more)
elasticsearch/indices/-bwwrqr3QYS_hoz8QFbCkQ/_state/: state-29.st
elasticsearch/indices/1QEfj9D8RGu_E5MJqWpn3w/_state/: state-26.st
elasticsearch/indices/5DSmoulHQvKHRoF-KsmrCw/_state/: state-27.st
elasticsearch/snapshot_cache/: segments_p
src/common/config/: cfg_processor_settings.py  elastic_upload_settings.py  url_app_settings.py
src/common/core/: config.py
src/common/elastic_queries/: queries.py
src/common/managers/: elastic.py  kafka.py  repository.py
src/common/models/: __init__.py  graph.py
src/common/schemas/: url_app.py
src/common/services/: process_url.py
src/elastic_upload/: upload.py
src/language_scrapers/cpp/: cfg_build_script.sh  file_to_cfg.py  repo_script.sh
src/language_scrapers/python/: cfg_build_script.sh  file_to_cfg.py  repo_script.sh
src/processors/: cfg_processor.py
src/url_app/: main.py
src/url_app/api/: dependencies.py
(+509 files in other folders)
