[tool.poetry]
name = "cfg_scrapper"
version = "0.1.0"
description = ""
authors = ["Jakub Zelek <email@example.com>"]
license = "MIT"

packages = [
    { include = "common", from = "src" },
    { include = "url_app", from = "src" },
    { include = "processors", from = "src" },
    { include = "language_scrapers", from = "src" },
    { include = "elastic_upload", from = "src" }
]

[tool.poetry.dependencies]
kafka-python = "2.0.2"
bytecode = "0.16.2"
pydantic-settings = "2.12.0"
uvicorn = "0.23.0"
python = "^3.11"
fastapi = "0.128.0"
pydantic = "2.12.5"
pydantic-core = "2.41.5"
starlette = "0.50.0"
anyio = "4.12.0"
elasticsearch = { version = "9.2.1", extras = ["async"] }
elastic-transport = "9.2.1"
networkx = "3.6.1"
annotated-doc = "0.0.4"
annotated-types = "0.7.0"
idna = "3.11"
python-dateutil = "2.9.0.post0"
six = "1.17.0"
sniffio = "1.3.1"
typing-extensions = "4.15.0"
typing-inspection = "0.4.2"
certifi = "2025.11.12"
urllib3 = "2.6.2"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
